--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
             <span id="operator">x</span>
             <span id="operand2">0</span>
             <span>=</span>
-            <p class="answer-messare">Enter Answer</p>
+            <p class="answer-message">Enter Answer</p>
             <input id="answer-box" type="number">
         </div>
-        <button data-type="Submit" class="btn btn-gray">Submit Answer</button>
+        <button data-type="submit" class="btn btn-gray">Submit Answer</button>
 
 
     </div>
 
     <div class="score-area">
         <p class="scores">Correct Answers <span id="score">0</span></p>
-        <p class="scores">Inorrect Answers <span id="incorrect">0</span></p>
+        <p class="scores">Incorrect Answers <span id="incorrect">0</span></p>
 
 
     </div>
